--- a/index.html
+++ b/index.html
@@ -25,180 +25,166 @@
       rel="stylesheet"
     />
     <link href="https://fonts.cdnfonts.com/css/gagalin" rel="stylesheet" />
-
     <title>GameXperience</title>
   </head>
 
-  <body>
-    <!-- Start Landing -->
-    <!-- navbar -->
-    <div>
-      <nav class="navbar navbar-expand-lg text-uppercase">
-        <div class="container">
-          <a class="navbar-brand" href="#page-top"
-            ><img src="assest/GameXperience.png" alt=""
-          /></a>
-          <button
-            class="navbar-toggler text-uppercase font-weight-bold text-white"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarResponsive"
-            aria-controls="navbarResponsive"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <i class="fas fa-bars"></i>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item active">
-                <a
-                  class="nav-link py-1 px-0 mx-lg-3 font-weight-bold text-white rounded"
-                  href="#home"
-                  data-target ="home"
-                  >Home</a
-                >
+  <body class="vh-100 overflow">
+    <!-- Start navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top">
+      <div class="container">
+        <!-- Logo -->
+        <a class="navbar-brand fs-3" href="#">GameXperience</a>
+        <!-- Toggle Btn -->
+        <button
+          class="navbar-toggler shadow-none border-0"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Sidebar -->
+        <div
+          class="sidebar offcanvas offcanvas-start"
+          tabindex="-1"
+          id="offcanvasNavbar"
+          aria-labelledby="offcanvasNavbarLabel"
+        >
+          <!-- Sidebar header -->
+          <div class="offcanvas-header text-white border-bottom">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">GameXperience</h5>
+            <button
+              type="button"
+              class="btn-close btn-close-white shadow-none"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
+          </div>
+          <!-- Sidebar body -->
+          <div class="offcanvas-body p-lg-0 d-flex flex-lg-row flex-column p-4">
+            <ul class="navbar-nav justify-content-center align-items-center fs-5 flex-grow-1 pe-3">
+              <li class="nav-item mx-2">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link py-1 px-0 mx-lg-3 font-weight-bold text-white rounded"
-                  href="#about"
-                  >About</a
-                >
+              <li class="nav-item mx-2">
+                <a class="nav-link" href="#about">About</a>
               </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link py-1 px-0 mx-lg-3 font-weight-bold text-white rounded"
-                  href="#services"
-                  data-target = "services"
-                  >Services</a
-                >
+              <li class="nav-item mx-2">
+                <a class="nav-link" href="#services">Services</a>
               </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link py-1 px-0 mx-lg-3 font-weight-bold text-white rounded"
-                  data-target ="gameCenters"
-                  href="#gameCenters"
-                  >Game centers</a
-                >
+              <li class="nav-item mx-2">
+                <a class="nav-link" href="#lounges">Lounges</a>
               </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link py-1 px-0 mx-lg-3 font-weight-bold text-white rounded"
-                  href="#community"
-                  data-target ="community"
-                  >Community</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link py-1 px-0 mx-lg-3 font-weight-bold text-white rounded"
-                  href="#contact"
-                  data-target ="contact"
-                  >Contact</a
-                >
+              <li class="nav-item mx-2">
+                <a class="nav-link" href="#contact">Contact</a>
               </li>
             </ul>
-            <div class="logSign mx-2">
-              <button class="loginButton">LOGIN</button>
-              <button class="signupButton">SIGNUP</button>
+            <!-- Login / Signup -->
+            <div class="d-flex flex-column flex-lg-row justify-content-center align-items-center gap-3">
+              <a href="login" class="text-white text-decoration-none">Login</a>
+              <a
+                href="signup"
+                class="text-white text-decoration-none px-3 py-1 bg-primary rounded-4"
+                >Sign Up</a
+              >
             </div>
           </div>
         </div>
-      </nav>
-      <!-- End navbar -->
-      <header id="home" class="masthead bg-primary text-white text-center active">
-        <!-- intro text -->
-        <div class="intro">
-          <div class="intro-content">
-            <div class="content content-1">
-              <i class="fa-solid fa-desktop"></i>
-              <p>Desktop, Steam</p>
-            </div>
-            <div class="content content-2">
-              <i class="fa-brands fa-playstation"></i>
-              <p>Playstation 4 & 5, Origin</p>
-            </div>
+      </div>
+    </nav>
+    <!-- End navbar -->
+    <header id="home" class="masthead bg-primary text-white text-center active">
+      <!-- intro text -->
+      <div class="intro">
+        <div class="intro-content">
+          <div class="content content-1">
+            <i class="fa-solid fa-desktop"></i>
+            <p>Desktop, Steam</p>
           </div>
-          <div class="intro-text">
-            <h1>
-              EXPLORE NEW GAME CENTERS <br />
-              IN YOUR AREA!
-            </h1>
-            <br />
-            <p>
-              Game experience provides you all game centers around you, giving
-              you the ability to book any type of devices you want to play your
-              game with, and we allow you to find any game partner in the game
-              center you will go to.
-            </p>
-            <button>SEE MORE</button>
+          <div class="content content-2">
+            <i class="fa-brands fa-playstation"></i>
+            <p>Playstation 4 & 5, Origin</p>
           </div>
         </div>
-        <!-- end intro text -->
-        <!-- slider -->
-        <div class="slides">
-          <div class="layer"></div>
-          <div class="slide slide-1">
-            <img src="assest/images/fonrtnite.jpg" class="slide-image" />
+        <div class="intro-text">
+          <h1>
+            EXPLORE NEW GAME CENTERS <br />
+            IN YOUR AREA!
+          </h1>
+          <br />
+          <p>
+            Game experience provides you all game centers around you, giving you
+            the ability to book any type of devices you want to play your game
+            with, and we allow you to find any game partner in the game center
+            you will go to.
+          </p>
+          <button>SEE MORE</button>
+        </div>
+      </div>
+      <!-- end intro text -->
+      <!-- slider -->
+      <div class="slides">
+        <div class="layer"></div>
+        <div class="slide slide-1">
+          <img src="assest/images/fonrtnite.jpg" class="slide-image" />
+        </div>
+        <div class="slide slide-2">
+          <img src="assest/images/rocketleague.jpg" class="slide-image" />
+        </div>
+        <div class="slide slide-3">
+          <img src="assest/images/unreal engine.jpg" class="slide-image" />
+        </div>
+      </div>
+      <!-- end slider -->
+    </header>
+    <!-- End Landing -->
+    <!-- services section -->
+    <section id="services">
+      <div class="services container">
+        <div class="header servicesHeader">
+          <h1>What <span>We Do ?</span></h1>
+          <h2>What <span>We Do ?</span></h2>
+        </div>
+        <div class="cards">
+          <div class="card card-1">
+            <img src="assest/images/services-1.jpg" />
+            <div class="serviceContent">
+              <h3>Partner</h3>
+              <p>Here you can find your gaming partner in the same place!!</p>
+              <button>MORE</button>
+            </div>
+            <div class="layer"></div>
           </div>
-          <div class="slide slide-2">
-            <img src="assest/images/rocketleague.jpg" class="slide-image" />
+          <div class="card card-2">
+            <img src="assest/images/services-2.jpg" />
+            <div class="serviceContent">
+              <h3>Gaming center</h3>
+              <p>Here you can register in any gaming center you like!!</p>
+              <button>MORE</button>
+            </div>
+            <div class="layer"></div>
           </div>
-          <div class="slide slide-3">
-            <img src="assest/images/unreal engine.jpg" class="slide-image" />
+          <div class="card card-3">
+            <img src="assest/images/services-3.jpg" />
+            <div class="serviceContent">
+              <h3>Devices</h3>
+              <p>Here you can choose any type of gaming device you want.</p>
+              <button>MORE</button>
+            </div>
+            <div class="layer"></div>
           </div>
         </div>
-        <!-- end slider -->
-      </header>
-      <!-- End Landing -->
-      <!-- services section -->
-      <section id="services">
-        <div class="services container">
-          <div class="header servicesHeader">
-            <h1>What <span>We Do ?</span></h1>
-            <h2>What <span>We Do ?</span></h2>
-          </div>
-          <div class="cards">
-            <div class="card card-1">
-              <img src="assest/images/services-1.jpg" />
-              <div class="serviceContent">
-                <h3>Partner</h3>
-                <p>Here you can find your gaming partner in the same place!!</p>
-                <button>MORE</button>
-              </div>
-              <div class="layer"></div>
-            </div>
-            <div class="card card-2">
-              <img src="assest/images/services-2.jpg" />
-              <div class="serviceContent">
-                <h3>Gaming center</h3>
-                <p>Here you can register in any gaming center you like!!</p>
-                <button>MORE</button>
-              </div>
-              <div class="layer"></div>
-            </div>
-            <div class="card card-3">
-              <img src="assest/images/services-3.jpg" />
-              <div class="serviceContent">
-                <h3>Devices</h3>
-                <p>Here you can choose any type of gaming device you want.</p>
-                <button>MORE</button>
-              </div>
-              <div class="layer"></div>
-            </div>
-          </div>
+      </div>
+    </section>
+    <section id="gameCenters">
+      <div class="gameCenters">
+        <div class="header GameCentersHeader">
+          <h1>Game <span>Centers</span></h1>
+          <h2>Game <span>Centers</span></h2>
         </div>
-      </section>
-      <section id="gameCenters">
-        <div class="gameCenters">
-          <div class="header GameCentersHeader">
-            <h1>Game <span>Centers</span></h1>
-            <h2>Game <span>Centers</span></h2>
-          </div>
-        </div>
-      </section>
-    </div>
+      </div>
+    </section>
     <!-- bootstrap javascript -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
