--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;600;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;600;800;900&display=swap"
       rel="stylesheet"
     />
     <link href="https://fonts.cdnfonts.com/css/gagalin" rel="stylesheet" />
@@ -122,9 +122,8 @@
         <div class="intro-text">
           <h1>EXPLORE LOUNGES IN YOUR AREA!</h1>
           <p>
-            Game experience provides you all game centers around you, giving you
-            the ability to book any type of devices you want to play your game
-            with.
+            Welcome to GameXperience, where the realm of entertainment knows no
+            bounds!
           </p>
           <button>SEE MORE</button>
         </div>
@@ -149,7 +148,56 @@
     <!-- End Landing -->
 
     <!-- Start services -->
-    
+    <div class="container">
+      <div id="services">
+        <h2>Services</h2>
+        <p id="paragraph">
+          Embark on a journey into the heart of gaming exhilaration as we
+          proudly present a haven crafted for both casual players and devoted
+          enthusiasts alike.
+        </p>
+        <div class="cards">
+          <div class="card">
+            <i class="fa-regular fa-handshake"></i>
+            <div class="content">
+              <h3>Gaming Partner</h3>
+              <p>
+                Here in GameXperience you can find your gaming partner at the
+                same place you are playing at!
+              </p>
+              <p>
+                If you are a team player you can also search for teams playing
+                your game!!
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <i class="fa-regular fa-chess-rook"></i>
+            <div class="content">
+              <h3>Game Lounges</h3>
+              <p>
+                GameXperience provides you all the gaming centers around you!
+              </p>
+              <p>
+                Giving you the ability to book and register in any of them online.
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <i class="fa-solid fa-gamepad"></i>
+            <div class="content">
+              <h3>Game Devices</h3>
+              <p>
+                GameXperience allows you to to see all device types available at the game center you chose! 
+              </p>
+              <p>
+                While tracking the number of device available too!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- End services -->
 
     <!-- bootstrap javascript -->
