--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
 
   <body class="vh-100 overflow">
     <!-- Start navbar -->
-    <nav
-      class="navbar navbar-expand-lg navbar-dark fixed-top shadow-none border-0"
-    >
+    <nav class="navbar navbar-expand-lg navbar-dark shadow-none border-0 fixed-top">
       <div class="container">
         <!-- Logo -->
         <a class="logo navbar-brand fs-3" href="#"
@@ -125,7 +123,7 @@
             Welcome to GameXperience, where the realm of entertainment knows no
             bounds!
           </p>
-          <button>SEE MORE</button>
+          <button>SEE MORE</a></button>
         </div>
       </div>
       <!-- End intro text -->
@@ -148,16 +146,18 @@
     <!-- End Landing -->
 
     <!-- Start services -->
-    <div class="container">
-      <div id="services">
-        <h2>Services</h2>
-        <p id="paragraph">
-          Embark on a journey into the heart of gaming exhilaration as we
-          proudly present a haven crafted for both casual players and devoted
-          enthusiasts alike.
-        </p>
-        <div class="cards">
-          <div class="card">
+    <section class="container">
+      <div id="services" class="services">
+        <div class="services-heading text-white text-center">
+          <h2>Services</h2>
+          <p id="paragraph">
+            Embark on a journey into the heart of gaming exhilaration as we
+            proudly present a haven crafted for both casual players and devoted
+            enthusiasts alike.
+          </p>
+        </div>
+        <div class="cards row gap-5 justify-content-center">
+          <div class="card col-9 col-md-5 col-lg-3">
             <i class="fa-regular fa-handshake"></i>
             <div class="content">
               <h3>Gaming Partner</h3>
@@ -171,7 +171,7 @@
               </p>
             </div>
           </div>
-          <div class="card">
+          <div class="card col-9 col-md-5 col-lg-3">
             <i class="fa-regular fa-chess-rook"></i>
             <div class="content">
               <h3>Game Lounges</h3>
@@ -179,25 +179,25 @@
                 GameXperience provides you all the gaming centers around you!
               </p>
               <p>
-                Giving you the ability to book and register in any of them online.
+                Giving you the ability to book and register in any of them
+                online.
               </p>
             </div>
           </div>
-          <div class="card">
+          <div class="card col-9 col-md-5 col-lg-3">
             <i class="fa-solid fa-gamepad"></i>
             <div class="content">
               <h3>Game Devices</h3>
               <p>
-                GameXperience allows you to to see all device types available at the game center you chose! 
+                GameXperience allows you to to see all device types available at
+                the game center you chose!
               </p>
-              <p>
-                While tracking the number of device available too!
-              </p>
+              <p>While tracking the number of device available too!</p>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <!-- End services -->
 
     <!-- bootstrap javascript -->
