home page modified

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <!-- Main Template CSS File -->
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/animate.css" />
     <!-- Render All Elements Normally -->
     <link rel="stylesheet" href="css/normalize.css" />
     <!-- font Awesome Library -->
@@ -21,136 +22,244 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;600;800;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&family=Titillium+Web:wght@200;300;600;900&display=swap"
       rel="stylesheet"
     />
     <link href="https://fonts.cdnfonts.com/css/gagalin" rel="stylesheet" />
     <title>GameXperience</title>
   </head>
 
-  <body class="vh-100 overflow">
-    <!-- Start navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark shadow-none border-0 fixed-top">
-      <div class="container">
-        <!-- Logo -->
-        <a class="logo navbar-brand fs-3" href="#"
-          >Game<span>X</span><span>perience</span>
-        </a>
-        <!-- Toggle Btn -->
-        <button
-          class="navbar-toggler shadow-none border-0"
-          type="button"
-          data-bs-toggle="offcanvas"
-          data-bs-target="#offcanvasNavbar"
-          aria-controls="offcanvasNavbar"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- Sidebar -->
-        <div
-          class="sidebar offcanvas offcanvas-start"
-          tabindex="-1"
-          id="offcanvasNavbar"
-          aria-labelledby="offcanvasNavbarLabel"
-        >
-          <!-- Sidebar header -->
-          <div class="offcanvas-header text-white border-bottom">
-            <h5 class="logo offcanvas-title" id="offcanvasNavbarLabel">
-              Game<span>X</span><span>perience</span>
-            </h5>
-            <button
-              type="button"
-              class="btn-close btn-close-white shadow-none"
-              data-bs-dismiss="offcanvas"
-              aria-label="Close"
-            ></button>
-          </div>
-          <!-- Sidebar body -->
-          <div class="offcanvas-body p-lg-0 d-flex flex-lg-row flex-column p-4">
-            <ul
-              class="navbar-nav justify-content-center align-items-center fs-5 flex-grow-1 pe-3"
-            >
-              <li class="nav-item mx-2">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item mx-2">
-                <a class="nav-link" href="#about">About</a>
-              </li>
-              <li class="nav-item mx-2">
-                <a class="nav-link" href="#services">Services</a>
-              </li>
-              <li class="nav-item mx-2">
-                <a class="nav-link" href="#lounges">Lounges</a>
-              </li>
-              <li class="nav-item mx-2">
-                <a class="nav-link" href="#contact">Contact</a>
-              </li>
-            </ul>
-            <!-- Login / Signup -->
+  <body>
+    <div class="header">
+      <!-- Start navbar -->
+      <nav
+        class="navbar navbar-expand-lg navbar-dark shadow-none border-0 sticky-top"
+      >
+        <div class="container">
+          <!-- Logo -->
+          <a class="logo navbar-brand fs-3" href="#"
+            ><img src="assest/GameXperience.png" />
+          </a>
+          <!-- Toggle Btn -->
+          <button
+            class="navbar-toggler shadow-none border-0"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasNavbar"
+            aria-controls="offcanvasNavbar"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <!-- Sidebar -->
+          <div
+            class="sidebar offcanvas offcanvas-start"
+            tabindex="-1"
+            id="offcanvasNavbar"
+            aria-labelledby="offcanvasNavbarLabel"
+          >
+            <!-- Sidebar header -->
+            <div class="offcanvas-header text-white border-bottom">
+              <h5 class="logo offcanvas-title" id="offcanvasNavbarLabel">
+                <img src="assest/GameXperience.png" />
+              </h5>
+              <button
+                type="button"
+                class="btn-close btn-close-white shadow-none"
+                data-bs-dismiss="offcanvas"
+                aria-label="Close"
+              ></button>
+            </div>
+            <!-- Sidebar body -->
             <div
-              class="d-flex flex-column flex-lg-row justify-content-center align-items-center gap-3"
+              class="offcanvas-body p-lg-0 d-flex flex-lg-row flex-column p-4"
             >
-              <a href="login" class="text-white text-decoration-none">Login</a>
-              <a
-                href="signup"
-                class="signupBtn text-black text-decoration-none px-3 py-1 rounded-4"
-                >Sign Up</a
+              <ul
+                class="navbar-nav justify-content-center align-items-center fs-5 flex-grow-1 pe-3"
               >
+                <li class="nav-item mx-2">
+                  <a class="nav-link active" aria-current="page" href="#"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item mx-2">
+                  <a class="nav-link" href="#about">About</a>
+                </li>
+                <li class="nav-item mx-2">
+                  <a class="nav-link" href="#services">Services</a>
+                </li>
+                <li class="nav-item mx-2">
+                  <a class="nav-link" href="#lounges">Lounges</a>
+                </li>
+                <li class="nav-item mx-2">
+                  <a class="nav-link" href="#contact">Contact</a>
+                </li>
+              </ul>
+              <!-- Login / Signup -->
+              <div
+                class="d-flex flex-column flex-lg-row justify-content-center align-items-center gap-3"
+              >
+                <a href="login" class="text-white text-decoration-none"
+                  >Login</a
+                >
+                <a
+                  href="signup"
+                  class="signupBtn text-black text-decoration-none px-3 py-1 rounded-4"
+                  >Sign Up</a
+                >
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </nav>
-    <!-- End navbar -->
-
-    <!-- Start Landing -->
-    <div class="landing-page">
-      <!-- Start intro text -->
-      <div class="intro">
-        <div class="intro-content">
-          <div class="content content-1">
-            <i class="fa-solid fa-desktop"></i>
-            <p>Desktop, Steam</p>
+      </nav>
+      <!-- End navbar -->
+      <!-- Start Landing -->
+      <div class="landing-page" style="height: calc(100vh - 80px)">
+        <!-- Start intro text -->
+        <div class="intro">
+          <div class="intro-content">
+            <div class="content content-1">
+              <i class="fa-solid fa-desktop"></i>
+              <p>Desktop, Steam</p>
+            </div>
+            <div class="content content-2">
+              <i class="fa-brands fa-playstation"></i>
+              <p>Playstation 4 & 5, Origin</p>
+            </div>
           </div>
-          <div class="content content-2">
-            <i class="fa-brands fa-playstation"></i>
-            <p>Playstation 4 & 5, Origin</p>
+          <div class="intro-text">
+            <h1>EXPLORE LOUNGES IN YOUR AREA!</h1>
+            <p>
+              Welcome to GameXperience, where the realm of entertainment knows
+              no bounds!
+            </p>
+            <button>SEE MORE</button>
           </div>
         </div>
-        <div class="intro-text">
-          <h1>EXPLORE LOUNGES IN YOUR AREA!</h1>
-          <p>
-            Welcome to GameXperience, where the realm of entertainment knows no
-            bounds!
-          </p>
-          <button>SEE MORE</a></button>
-        </div>
-      </div>
-      <!-- End intro text -->
+        <!-- End intro text -->
 
-      <!-- Start slider -->
-      <div class="slides">
-        <div class="layer"></div>
-        <div class="slide slide-1">
-          <img src="assest/images/fonrtnite.jpg" class="slide-image" />
+        <!-- Start slider -->
+        <div class="slides">
+          <div class="layer"></div>
+          <div class="slide slide-1">
+            <img src="assest/images/fonrtnite.jpg" class="slide-image" />
+          </div>
+          <div class="slide slide-2">
+            <img src="assest/images/rocketleague.jpg" class="slide-image" />
+          </div>
+          <div class="slide slide-3">
+            <img src="assest/images/unreal engine.jpg" class="slide-image" />
+          </div>
         </div>
-        <div class="slide slide-2">
-          <img src="assest/images/rocketleague.jpg" class="slide-image" />
-        </div>
-        <div class="slide slide-3">
-          <img src="assest/images/unreal engine.jpg" class="slide-image" />
-        </div>
+        <!-- End slider -->
       </div>
-      <!-- End slider -->
+      <!-- End Landing -->
     </div>
-    <!-- End Landing -->
-
+    <div class="lounges">
+      <div class="main-heading text-white text-center">
+        <h2 class="hidden">Featured Lounges</h2>
+      </div>
+      <div class="container-noBT">
+        <div class="lounge">
+          <div class="details">
+            <h1>Campu Gaming Center</h1>
+            <h2>PC, Console</h2>
+            <h3>Amman, Amman Jordan</h3>
+            <div class="rating">
+              <i class="fa-solid fa-star" style="color: #fac710"></i>
+              <i class="fa-solid fa-star" style="color: #fac710"></i>
+              <i class="fa-solid fa-star" style="color: #fac710"></i>
+              <i class="fa-solid fa-star" style="color: #fac710"></i>
+              <i class="fa-solid fa-star" style="color: #818da2"></i>
+              <p>(399)</p>
+            </div>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Consequuntur perspiciatis itaque mollitia expedita nulla.
+            </p>
+            <button>Book Now</button>
+          </div>
+          <div class="gallary">
+            <img class="hidden" src="/assest/images/center-1.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="lounge">
+          <div class="gallary">
+            <img class="hidden" src="/assest/images/center-2.jpg" alt="" />
+          </div>
+          <div class="details">
+            <h1>The Corner Gaming Center</h1>
+            <h2>PC, Console</h2>
+            <h3>Amman and nearby areas</h3>
+            <div class="rating">
+              <i class="fa-solid fa-star" style="color: #fac710"></i>
+              <i class="fa-solid fa-star" style="color: #fac710"></i>
+              <i class="fa-solid fa-star" style="color: #fac710"></i>
+              <i class="fa-solid fa-star" style="color: #fac710"></i>
+              <i class="fa-solid fa-star" style="color: #818da2"></i>
+              <p>(214)</p>
+            </div>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Consequuntur perspiciatis itaque mollitia expedita nulla.
+            </p>
+            <button>Book Now</button>
+          </div>
+        </div>
+        <div class="lounge">
+          <div class="details">
+            <h1>Challenge Gaming Center</h1>
+            <h2>PC, Console</h2>
+            <h3>Abdullah Bin Rawahah St 17 Al Rabyeh</h3>
+            <div class="rating">
+              <i class="fa-solid fa-star" style="color: #fac710"></i>
+              <i class="fa-solid fa-star" style="color: #fac710"></i>
+              <i class="fa-solid fa-star" style="color: #fac710"></i>
+              <i class="fa-solid fa-star" style="color: #fac710"></i>
+              <i class="fa-solid fa-star" style="color: #818da2"></i>
+              <p>(42)</p>
+            </div>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Consequuntur perspiciatis itaque mollitia expedita nulla.
+            </p>
+            <button>Book Now</button>
+          </div>
+          <div class="gallary">
+            <img class="hidden" src="/assest/images/center-3.jpg" alt="" />
+          </div>
+        </div>
+        <div class="lounge">
+          <div class="gallary">
+            <img class="hidden" src="/assest/images/center-4.jpg" alt="" />
+          </div>
+          <div class="details">
+            <h1>GamingX gaming center</h1>
+            <h2>PC, Console</h2>
+            <h3>mman and nearby areas</h3>
+            <div class="rating">
+              <i class="fa-solid fa-star" style="color: #fac710"></i>
+              <i class="fa-solid fa-star" style="color: #fac710"></i>
+              <i class="fa-solid fa-star" style="color: #fac710"></i>
+              <i class="fa-solid fa-star" style="color: #fac710"></i>
+              <i class="fa-solid fa-star" style="color: #818da2"></i>
+              <p>(79)</p>
+            </div>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Consequuntur perspiciatis itaque mollitia expedita nulla.
+            </p>
+            <button>Book Now</button>
+          </div>
+        </div>
+      </div>
+      <button class="btn btn-primary">SEE MORE</button>
+    </div>
     <!-- Start services -->
     <section class="container">
       <div id="services" class="services">
-        <div class="services-heading text-white text-center">
-          <h2>Services</h2>
-          <p id="paragraph">
+        <div class="main-heading text-white text-center">
+          <h2 class="hidden">Services</h2>
+          <p class="hidden">
             Embark on a journey into the heart of gaming exhilaration as we
             proudly present a haven crafted for both casual players and devoted
             enthusiasts alike.
@@ -158,7 +267,7 @@
         </div>
         <div class="cards row gap-5 justify-content-center">
           <div class="card col-9 col-md-5 col-lg-3">
-            <i class="fa-regular fa-handshake"></i>
+            <i class="fa-solid fa-handshake"></i>
             <div class="content">
               <h3>Gaming Partner</h3>
               <p>
@@ -198,7 +307,66 @@
         </div>
       </div>
     </section>
+    <div class="search">
+      <div class="layer"></div>
+      <div class="title">
+        <h2>Game Lounges Search</h2>
+      </div>
+      <div class="form">
+        <form action="">
+          <input type="text" placeholder="Game Type" />
+          <select name="location" id="location">
+            <option value="Amman">Amman</option>
+            <option value="Irbid">Irbid</option>
+            <option value="Zarqa">Zarqa</option>
+          </select>
+          <button>SEARCH</button>
+        </form>
+      </div>
+    </div>
+    <div class="social-media">
+      <div class="app">
+        <a href=""><i class="fa-brands fa-twitter"></i></a>
+        <h2>Twitter</h2>
+      </div>
+      <div class="app">
+        <a href=""><i class="fa-brands fa-facebook"></i></a>
+        <h2>Facebook</h2>
+      </div>
+      <div class="app">
+        <a href=""><i class="fa-brands fa-youtube"></i></a>
+        <h2>Youtube</h2>
+      </div>
+      <div class="app">
+        <a href=""><i class="fa-brands fa-instagram"></i></a>
+        <h2>instagram</h2>
+      </div>
+      <div class="app">
+        <a href=""><i class="fa-brands fa-twitch"></i></a>
+        <h2>Twitch</h2>
+      </div>
+    </div>
     <!-- End services -->
+    <!-- <section class="container">
+      <div class="features">
+        <div class="services-heading text-white text-center">
+          <h2>Offers & Deals</h2>
+          <p>Promotions, deals and special offers for you!</p>
+        </div>
+        <div class="cards row gap-5 justify-content-center">
+          <div class="card col-6 col-md-5 col-lg-3">
+            <div class="content">
+              <h3>Transfare your Time to your next stop!</h3>
+              <p>
+                You can save your paid time and use it at aother gaming center!
+              </p>
+              <a href="" class="btn btn-primary">Subecribe Now</a>
+            </div>
+          </div>
+          <div class="card col-6 col-md-5 col-lg-3"></div>
+        </div>
+      </div>
+    </section> -->
 
     <!-- bootstrap javascript -->
     <script
