--- a/index.html
+++ b/index.html
@@ -346,6 +346,29 @@
         <h2>Twitch</h2>
       </div>
     </div>
+    <!-- start footer -->
+    <section class="footer">
+      <div class="footer-content">
+        <img src="assest/GameXperience.png" alt="" />
+        <p>
+          At GameXperience, we believe that gaming is not just a pastime, but a
+          vibrant culture that brings people together, sparks creativity, and
+          offers unforgettable experiences. Whether you're a seasoned gamer, a
+          casual player, or someone exploring the gaming universe for the first
+          time, you'll find a welcoming home here.
+        </p>
+        <div class="icons">
+          <a href=""><i class="fa-brands fa-twitter"></i></a>
+          <a href=""><i class="fa-brands fa-facebook"></i></a>
+          <a href=""><i class="fa-brands fa-youtube"></i></a>
+          <a href=""><i class="fa-brands fa-instagram"></i></a>
+          <a href=""><i class="fa-brands fa-twitch"></i></a>
+        </div>
+      </div>
+      <div class="footer content">
+        <h4></h4>
+      </div>
+    </section>
     <!-- End services -->
     <!-- <section class="container">
       <div class="features">
